ya se muestran los iconos de acuerdo con lo que se les indica en los componentes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio - UASLP</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    
+    <mi-icono icono="fab fa-facebook-square"></mi-icono>
+    <mi-icono icono="fab fa-twitter"></mi-icono>
+    <mi-icono icono="fab fa-instagram"></mi-icono>
+    <script src="./icono.js"></script>
 </body>
 </html>
