--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - UASLP</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <mi-icono icono="fab fa-facebook-square"></mi-icono>
     <mi-icono icono="fab fa-twitter"></mi-icono>
+    <mi-icono icono="fab fa-youtube"></mi-icono>
     <mi-icono icono="fab fa-instagram"></mi-icono>
-    <script src="./icono.js"></script>
+<script src="./icono.js"></script>
 </body>
 </html>
