--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
    <!--<mi-icono icono="fab fa-facebook-square"></mi-icono>
     <mi-icono icono="fab fa-twitter"></mi-icono>
     <mi-icono icono="fab fa-youtube"></mi-icono>
-    <mi-header></mi-header>
+     <mi-footer></mi-footer>
     <mi-icono icono="fab fa-instagram"></mi-icono>--> 
+    <mi-header></mi-header>
+    <br>
     <mi-footer></mi-footer>
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
     <script src="./ancla.js"></script>
+    <script src="./logo.js"></script>
 </body>
 </html>
