la card individual funciona correctamente

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <mi-icono icono="fab fa-twitter"></mi-icono>
     <mi-icono icono="fab fa-youtube"></mi-icono>
      <mi-footer></mi-footer>
-    <mi-icono icono="fab fa-instagram"></mi-icono>--> 
+    <mi-icono icono="fab fa-instagram"></mi-icono>
     <mi-header></mi-header>
     <br>
-    <mi-footer></mi-footer>
+    <mi-footer></mi-footer>--> 
+    <mi-card background-image="./assets/barbie.png" fecha-evento="08 abr." titulo-evento="Velada Estelar: Barbieland"></mi-card>
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
     <script src="./ancla.js"></script>
     <script src="./logo.js"></script>
+    <script src="./card.js"></script>
 </body>
 </html>
