el contenedor de cards está casi terminado, implemnetra el efecto del boton

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <mi-header></mi-header>
     <br>
     <mi-footer></mi-footer>--> 
-    <mi-card background-image="./assets/barbie.png" fecha-evento="08 abr." titulo-evento="Velada Estelar: Barbieland"></mi-card>
+    <mi-evento></mi-evento>
+    
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
     <script src="./ancla.js"></script>
     <script src="./logo.js"></script>
     <script src="./card.js"></script>
+    <script src="./eventos.js"></script>
 </body>
 </html>
