--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <mi-icono icono="fab fa-youtube"></mi-icono>
      <mi-footer></mi-footer>
     <mi-icono icono="fab fa-instagram"></mi-icono>
-    <mi-header></mi-header>
-    <br>
-    <mi-footer></mi-footer>--> 
-    <mi-evento></mi-evento>
     
+    <br>
+    >--> 
+    <mi-header></mi-header>
+    <mi-evento></mi-evento>
+    <mi-footer></mi-footer
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
@@ -25,5 +26,6 @@
     <script src="./logo.js"></script>
     <script src="./card.js"></script>
     <script src="./eventos.js"></script>
+    <script src="./boton.js"></script>
 </body>
 </html>
