se agrega componente de link de navbar simple

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <mi-icono icono="fab fa-instagram"></mi-icono>
     
     <br>
-    >--> 
+    >
     <mi-header></mi-header>
     <mi-evento></mi-evento>
-    <mi-footer></mi-footer
+    <mi-footer</mi-footer> -->
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
@@ -27,5 +27,7 @@
     <script src="./card.js"></script>
     <script src="./eventos.js"></script>
     <script src="./boton.js"></script>
+    <script src="./navbar-simple-link.js"></script>
+    <script src="./navbar-dropdown-head-link.js"></script>
 </body>
 </html>
