se crea componente head de dropdown

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <mi-header></mi-header>
     <mi-evento></mi-evento>
     <mi-footer</mi-footer> -->
+    <mi-dropdown-head></mi-dropdown-head>
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
