--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <mi-header></mi-header>
     <mi-evento></mi-evento>
     <mi-footer</mi-footer> -->
-    <mi-dropdown-head></mi-dropdown-head>
+    <mi-dropdown-item></mi-dropdown-item>
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
@@ -30,5 +30,6 @@
     <script src="./boton.js"></script>
     <script src="./navbar-simple-link.js"></script>
     <script src="./navbar-dropdown-head-link.js"></script>
+    <script src="./item-dropdown.js"></script>
 </body>
 </html>
