--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
      <mi-footer></mi-footer>
     <mi-icono icono="fab fa-instagram"></mi-icono>
     
-    <br>
-    >
+    <br>-->
     <mi-header></mi-header>
+    <mi-navbar></mi-navbar>
+   
     <mi-evento></mi-evento>
-    <mi-footer</mi-footer> -->
-    <mi-dropdown-item></mi-dropdown-item>
+    <mi-footer></mi-footer> 
+   
     <script src="./footer.js"></script>
     <script src="./header.js"></script>
     <script src="./icono.js"></script>
@@ -28,6 +29,7 @@
     <script src="./card.js"></script>
     <script src="./eventos.js"></script>
     <script src="./boton.js"></script>
+    <script src="./navbar.js"></script>
     <script src="./navbar-simple-link.js"></script>
     <script src="./navbar-dropdown-head-link.js"></script>
     <script src="./item-dropdown.js"></script>
