hoja de estilos globales aplicada

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - UASLP</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/global.css">
 </head>
 <body>
    <!--<mi-icono icono="fab fa-facebook-square"></mi-icono>
@@ -21,17 +21,17 @@
     <mi-evento></mi-evento>
     <mi-footer></mi-footer> 
    
-    <script src="./footer.js"></script>
-    <script src="./header.js"></script>
-    <script src="./icono.js"></script>
-    <script src="./ancla.js"></script>
-    <script src="./logo.js"></script>
-    <script src="./card.js"></script>
-    <script src="./eventos.js"></script>
-    <script src="./boton.js"></script>
-    <script src="./navbar.js"></script>
-    <script src="./navbar-simple-link.js"></script>
-    <script src="./navbar-dropdown-head-link.js"></script>
-    <script src="./item-dropdown.js"></script>
+    <script src="./layouts/footer.js"></script>
+    <script src="./layouts/header.js"></script>
+    <script src="./components/icono.js"></script>
+    <script src="./components/ancla.js"></script>
+    <script src="./components/logo.js"></script>
+    <script src="./components/card.js"></script>
+    <script src="./layouts/eventos.js"></script>
+    <script src="./components/boton.js"></script>
+    <script src="./layouts/navbar.js"></script>
+    <script src="./components/navbar-simple-link.js"></script>
+    <script src="./components/dropdown/navbar-dropdown-head-link.js"></script>
+    <script src="./components/dropdown/item-dropdown.js"></script>
 </body>
 </html>
