--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <br>-->
     <mi-header></mi-header>
     <mi-navbar></mi-navbar>
-   
+    <breadcrumb-container items='["Inicio", "Categoría", "Subcategoría", "Página actual"]'></breadcrumb-container>
     <mi-evento></mi-evento>
     <br>
     <br>
     <mi-footer></mi-footer> 
-   
+    
+
     <script src="./layouts/footer.js"></script>
     <script src="./layouts/header.js"></script>
     <script src="./components/icono.js"></script>
@@ -35,5 +36,7 @@
     <script src="./components/navbar-simple-link.js"></script>
     <script src="./components/dropdown/navbar-dropdown-head-link.js"></script>
     <script src="./components/dropdown/item-dropdown.js"></script>
+    <script src="./components/breadcrumb.js"></script>
+    <script src="./layouts/breadcrumbs-container.js"></script>
 </body>
 </html>
